# directory-db

./: .gitignore  README.md  WORKSPACE
src/common/: BUILD.bazel  data_model.h  data_model.proto  directory.proto  dunder.h  iobuf.cc  iobuf.h
src/common/files/: README.md  file_path.cc  file_path.h  file_util.h  input_file_stream.cc  input_file_stream.h  output_file_stream.cc  output_file_stream.h
src/engine/: BUILD.bazel  engine.h  table.cc  table.h  table_builder.cc  table_builder.h
test/: BUILD.bazel  bazel_test.cc  common_test.cc  file_test.cc  flare_test.cc  iobuf_test.cc  table_builder_test.cc  table_test.cc
