load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "bazel_test",
    size = "small",
    srcs = ["bazel_test.cc"],
    deps = [
        "@com_google_googletest//:gtest_main",
        "@boost//:accumulators"
    ],
)

cc_test(
    name = "table_builder_test",
    srcs = ["table_builder_test.cc"],
    deps = [
        "//src/engine:table_builder",
        "@com_google_googletest//:gtest_main",
    ]
)

cc_test(
    name = "flare_test",
    srcs = ["flare_test.cc"],
    deps = [
        "//src/common:data_model",
        "@com_google_googletest//:gtest_main",
        "@boost//:asio",
    ]
)

cc_test(
    name = "table_test",
    srcs = ["table_test.cc"],
    deps = [
        "//src/engine:table",
        "//src/engine:table_builder",
        "@com_google_googletest//:gtest_main",
    ]
)