load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "directory_proto",
    srcs = ["directory.proto"],
    deps = [],
)

cc_proto_library(
    name = "directory_cc_proto",
    deps = [":directory_proto"],
    visibility = ["//visibility:public"]
)