load("@rules_cc//cc:defs.bzl", "cc_proto_library", "cc_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "data_model_proto",
    srcs = ["data_model.proto"],
    deps = [],
)

cc_proto_library(
    name = "data_model_cc_proto",
    deps = [":data_model_proto"],
    visibility = ["//visibility:public"]
)

cc_library(
    name = "data_model",
    srcs = [
        "data_model.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":data_model_cc_proto"
    ]
)