load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "table_builder",
    srcs = [
        "table_builder.cc",
        "table_builder.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":table",
        "//src/common:data_model",
        "@boost//:iostreams",
    ]
)

cc_library(
    name = "table",
    srcs = [
        "table.cc",
        "table.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//src/common:data_model",
        "@boost//:iostreams",
    ]
)